test/ppx_irmin/deriver/errors/unsupported_type_variable.ml
type 'typvar t = 'typvar [@@deriving irmin]
