test/ppx_irmin/deriver/errors/unsupported_type_variable.expected
File "unsupported_type_variable.ml", line 1, characters 17-24:
Error: ppx_irmin: uninstantiated type variable 'typvar found. Irmin types must be grounded.
